2024-11-08 Franz Holzinger  <franz@ttproducts.de>
    * Fix bug with MINFREEMEMORY: Calculate the really free memory.

2024-07-31 Franz Holzinger  <franz@ttproducts.de>
    * support for TYPO3 13
    * use errorLog with Symfony CliDumper dump method instead of the
      print_r method which resulted sometimes in a PHP memory allocation exception

2024-07-29 Franz Holzinger  <franz@ttproducts.de>
    * new constant MINFREEMEMORY to keep define the minimum amount of free space which must be considered. If the free memory is below of it, then the debug output will stop in order to avoid a PHP exception about exhausted allowed memory size.

2024-07-17 Franz Holzinger  <franz@ttproducts.de>
    * new constant ERROR_LOG_MAX to limit all error_log calls to about 64 characters

2023-12-31 Franz Holzinger  <franz@ttproducts.de>
    * use rector to improve the PHP code

2023-10-24 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: use method TypoScriptFrontendController::determineId to determine the current page id of the frontend in all cases

2023-07-21 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: enable backend debugging. Check if the mode has changed from frontend to backend.
    * remove constant FH_DEBUG_EXT

2023-07-06 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: remove wrong error_log statement
    * bugfix: Always use the PHP error log file 'fileadmin/phpDebugErrorLog.txt' if nothing has been set.
    * bugfix: Do not call \JambageCom\Fhdebug\Utility\DebugFunctions::debug without the error object any more, because it is now automatically initialized.

2023-07-05 Franz Holzinger  <franz@ttproducts.de>
    * new feature: auto initialization of the global error object when the debug function is called even before the middleware is executed.

2023-05-10 Franz Holzinger  <franz@ttproducts.de>
    * new feature: add global methods fhdebug, fhdebugBegin and fhdebugEnd
    * compatibility TYPO3 12.4

2022-12-01 Franz Holzinger  <franz@ttproducts.de>